Fix radio/checkboxes having weird spacing when in an error state

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -412,9 +412,16 @@ form {
         }
     }
 
-    .error .code-editor-wrapper {
-        margin-bottom: 0;
-        padding: 0;
+    .error {
+        .code-editor-wrapper {
+            margin-bottom: 0;
+            padding: 0;
+        }
+
+        input[type="checkbox"],
+        input[type="radio"] {
+            margin-bottom: inherit;
+        }
     }
 
     .code-editor {
